# pyphotonicsims

./: .gitignore  LICENSE  Makefile  PDH modeling test.ipynb  PLL modeling.ipynb  README.md  control modeling test.ipynb  control_test.py  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: PDH modeling test-checkpoint.ipynb
control_core/: control_systems.py  control_systems_1.py
control_systems/: control_core.py
control_systems/.ipynb_checkpoints/: control_core-checkpoint.py
laserdata/: 20200305_ML_freqresp_data.csv
notebook/: PDH modeling.ipynb  PDH-model-DFB-laser-1550nm.ipynb  PDH-model-Morton-laser-1550nm.ipynb  PLL modeling.ipynb  PLL-model-VCO-Z50.ipynb  PLL-model-VCO-ZOS50.ipynb  SBS-laser-cascaded-emission-400MQ-TE-R12mm.ipynb  SBS-laser-cascaded-emission-4meter-coil.ipynb  SBS-laser-cascaded-emission.ipynb  SBS-laser-pzt-sbs-v1-R2710mm.ipynb  SBSmodel-test.ipynb  Untitled.ipynb  control-model-test.ipynb  control_test.ipynb  control_test.py  laser dynamics.ipynb  lasermodel-PI-dynamics-ecl.ipynb  lasermodel-PI-dynamics-hybrid-ecl.ipynb  lasermodel-PI-dynamics-inplane.ipynb
notebook/.ipynb_checkpoints/: PDH modeling-checkpoint.ipynb  PDH-model-DFB-laser-1550nm-checkpoint.ipynb  PDH-model-Morton-laser-1550nm-checkpoint.ipynb  PLL modeling-checkpoint.ipynb  PLL-model-VCO-ZOS50-checkpoint.ipynb  SBS-laser-cascaded-emission-4meter-coil-checkpoint.ipynb  SBS-laser-cascaded-emission-checkpoint.ipynb  (+4 more)
pyphotonicsims/: box_integration.py
pyphotonicsims.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: control_test.py
(+64 files in other folders)
